README 작성 & 개인정보 삭제

--- a/Web_API/원신api/d/index copy.html
+++ b/Web_API/원신api/d/index copy.html
@@ -15,7 +15,7 @@
     <div id="game-stats">Loading...</div>
 
     <script>
-        const apiUrl = 'http://localhost:3000/genshin/877545339';  // 프록시 서버로 요청
+        const apiUrl = 'http://localhost:3000/genshin/??????';  // 프록시 서버로 UID에 대한 정보 요청
 
         const fetchGameStats = async () => {
             try {
