--- a/Web_API/PP_API.html
+++ b/Web_API/PP_API.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Recent Game Stats</title>
+    <title>나의 캐릭터 탭</title>
     <style>
-        /* CSS 부분 - 페이지 스타일링 */
         body { 
             font-family: Arial, sans-serif; 
             margin: 20px; 
@@ -23,18 +22,18 @@
     </style>
 </head>
 <body>
-    <h1>My Recent Game Stats</h1>
-    <div id="game-stats">Loading...</div> <!-- 데이터가 표시될 영역 -->
+    <h1>나의 캐릭터</h1>
+    <div id="game-stats">로딩동링딩동...</div>
 
     <script>
-    const apiUrl = 'https://open.api.nexon.com/maplestory/v1/character/basic?ocid=a31eb419699425dcc4cc4ea6f09414e4efe8d04e6d233bd35cf2fabdeb93fb0d'; // 여기에 실제 게임 API URL을 입력하세요.
+    const apiUrl = 'https://open.api.nexon.com/maplestory/v1/character/basic?ocid=????????????????????????'; // 게임 ocid 입력란
     const additionalApiUrl = 'https://open.api.nexon.com/maplestory/v1/character/list';
-    const apiKey = 'test_c9cbd0b4e288c4a4baf33f79d24626cb5435076d09e380d66c602405d4841a7eefe8d04e6d233bd35cf2fabdeb93fb0d';
+    const apiKey = '?????????????????????????????????';     // apikey 입력란
     const fetchGameStats = async () => {
             try {
-                const response = await fetch(apiUrl, { // 'urlString' 대신 'apiUrl'을 사용해야 합니다.
+                const response = await fetch(apiUrl, { 
                     headers:{
-                        "x-nxopen-api-key": apiKey // 'API_KEY'가 아닌 'apiKey'를 사용해야 합니다.
+                        "x-nxopen-api-key": apiKey
                     }
                 });
 
@@ -46,7 +45,7 @@
                 console.log(data);
                 
 
-                // 데이터를 HTML에 표시하는 로직
+                // 넥슨 API에서 제공하는 양식대로 입력하면 출력
                 const gameStatsDiv = document.getElementById('game-stats');
                 gameStatsDiv.innerHTML = `
                    <h2>캐릭터 이름: ${data.character_name}</h2>
@@ -62,34 +61,6 @@
             } catch (error) {
                 console.error('Error fetching data:', error);
                 document.getElementById('game-stats').innerText = 'Failed to load game stats.';
-            }
-        };
-        // 두 번째 API 요청 - 캐릭터 목록
-        const fetchAdditionalStats = async () => {
-            try {
-                const response = await fetch(additionalApiUrl, {
-                    headers: {
-                        "x-nxopen-api-key": apiKey
-                    }
-                });
-
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-
-                const data = await response.json();
-                console.log('Additional Data:', data);
-
-                const additionalStatsDiv = document.getElementById('additional-stats');
-                additionalStatsDiv.innerHTML = `
-                    <h2>장비 정보</h2>
-                    <p><strong>무기:</strong> ${data.weapon}</p>
-                    <p><strong>방어구:</strong> ${data.armor}</p>
-                    <p><strong>장신구:</strong> ${data.accessories}</p>
-                `;
-            } catch (error) {
-                console.error('Error fetching additional data:', error);
-                document.getElementById('additional-stats').innerText = 'Failed to load additional stats.';
             }
         };
 
